Fixed multi-angle support not working by adding a call to enable libdvdnav. Added static preview for titles in the queue titles dialog. Added ability to play source titles on DVDs with VLC or MPC-HC in queue source dialog. Added ability to override the naming format in the queue titles dialog.

--- a/VidCoder/Properties/Settings.settings
+++ b/VidCoder/Properties/Settings.settings
@@ -143,5 +143,17 @@
     <Setting Name="PlaySoundOnCompletion" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="LastPlayer" Type="System.String" Scope="User">
+      <Value Profile="(Default)">vlc</Value>
+    </Setting>
+    <Setting Name="QueueTitlesUseNameOverride" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="QueueTitlesNameOverride" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="QueueTitlesDialogPlacement2" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
