--- a/VidCoder/app.config
+++ b/VidCoder/app.config
@@ -150,6 +150,18 @@
    <setting name="PlaySoundOnCompletion" serializeAs="String">
     <value>False</value>
    </setting>
+   <setting name="LastPlayer" serializeAs="String">
+    <value>vlc</value>
+   </setting>
+   <setting name="QueueTitlesUseNameOverride" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="QueueTitlesNameOverride" serializeAs="String">
+    <value />
+   </setting>
+   <setting name="QueueTitlesDialogPlacement2" serializeAs="String">
+    <value />
+   </setting>
   </VidCoder.Properties.Settings>
 	</userSettings>
 </configuration>
