Adding option to disable LibDVDNav and fall back to libdvdread.

--- a/VidCoder/app.config
+++ b/VidCoder/app.config
@@ -162,6 +162,9 @@
    <setting name="QueueTitlesDialogPlacement2" serializeAs="String">
     <value />
    </setting>
+   <setting name="EnableLibDvdNav" serializeAs="String">
+    <value>True</value>
+   </setting>
   </VidCoder.Properties.Settings>
 	</userSettings>
 </configuration>
