--- a/VidCoder/app.config
+++ b/VidCoder/app.config
@@ -165,6 +165,9 @@
    <setting name="EnableLibDvdNav" serializeAs="String">
     <value>True</value>
    </setting>
+   <setting name="MinimumTitleLengthSeconds" serializeAs="String">
+    <value>10</value>
+   </setting>
   </VidCoder.Properties.Settings>
 	</userSettings>
 </configuration>
