--- a/VidCoder/app.config
+++ b/VidCoder/app.config
@@ -168,6 +168,9 @@
    <setting name="MinimumTitleLengthSeconds" serializeAs="String">
     <value>10</value>
    </setting>
+   <setting name="DeleteSourceFilesOnClearingCompleted" serializeAs="String">
+    <value>False</value>
+   </setting>
   </VidCoder.Properties.Settings>
 	</userSettings>
 </configuration>
