Added option to disable remembering recent files and folders.

--- a/VidCoder/Properties/Settings.settings
+++ b/VidCoder/Properties/Settings.settings
@@ -164,5 +164,8 @@
     <Setting Name="DeleteSourceFilesOnClearingCompleted" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="RememberPreviousFiles" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
