--- a/VidCoder/app.config
+++ b/VidCoder/app.config
@@ -171,6 +171,9 @@
    <setting name="DeleteSourceFilesOnClearingCompleted" serializeAs="String">
     <value>False</value>
    </setting>
+   <setting name="RememberPreviousFiles" serializeAs="String">
+    <value>True</value>
+   </setting>
   </VidCoder.Properties.Settings>
 	</userSettings>
 </configuration>
