Added ability to drag a folder full of video files to queue them all. Along with it comes a configurable list of recognized extensions.

--- a/VidCoder/Properties/Settings.settings
+++ b/VidCoder/Properties/Settings.settings
@@ -167,5 +167,8 @@
     <Setting Name="RememberPreviousFiles" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="VideoFileExtensions" Type="System.String" Scope="User">
+      <Value Profile="(Default)">avi, mkv, mp4, m4v, mpg, mpeg, mov, wmv</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
