--- a/VidCoder/app.config
+++ b/VidCoder/app.config
@@ -174,6 +174,9 @@
    <setting name="RememberPreviousFiles" serializeAs="String">
     <value>True</value>
    </setting>
+   <setting name="VideoFileExtensions" serializeAs="String">
+    <value>avi, mkv, mp4, m4v, mpg, mpeg, mov, wmv</value>
+   </setting>
   </VidCoder.Properties.Settings>
 	</userSettings>
 </configuration>
