--- a/VidCoder/app.config
+++ b/VidCoder/app.config
@@ -40,7 +40,7 @@
     <value>{source}-{title}</value>
    </setting>
    <setting name="NativeLanguageCode" serializeAs="String">
-    <value>und</value>
+    <value />
    </setting>
    <setting name="DubAudio" serializeAs="String">
     <value>False</value>
@@ -176,6 +176,24 @@
    </setting>
    <setting name="VideoFileExtensions" serializeAs="String">
     <value>avi, mkv, mp4, m4v, mpg, mpeg, mov, wmv</value>
+   </setting>
+   <setting name="AudioLanguageCode" serializeAs="String">
+    <value>und</value>
+   </setting>
+   <setting name="SubtitleLanguageCode" serializeAs="String">
+    <value>und</value>
+   </setting>
+   <setting name="AutoAudioAll" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="AutoSubtitleAll" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="AutoSubtitleOnlyIfDifferent" serializeAs="String">
+    <value>True</value>
+   </setting>
+   <setting name="AutoSubtitleBurnIn" serializeAs="String">
+    <value>True</value>
    </setting>
   </VidCoder.Properties.Settings>
 	</userSettings>
