--- a/VidCoder/app.config
+++ b/VidCoder/app.config
@@ -183,6 +183,12 @@
    <setting name="SubtitleLanguageCode" serializeAs="String">
     <value>und</value>
    </setting>
+   <setting name="AutoAudio" serializeAs="String">
+    <value>Disabled</value>
+   </setting>
+   <setting name="AutoSubtitle" serializeAs="String">
+    <value>Disabled</value>
+   </setting>
    <setting name="AutoAudioAll" serializeAs="String">
     <value>False</value>
    </setting>
@@ -194,6 +200,9 @@
    </setting>
    <setting name="AutoSubtitleBurnIn" serializeAs="String">
     <value>True</value>
+   </setting>
+   <setting name="PreferredPlayer" serializeAs="String">
+    <value>vlc</value>
    </setting>
   </VidCoder.Properties.Settings>
 	</userSettings>
