Added updater support for beta updates track.

--- a/VidCoder/Properties/Settings.settings
+++ b/VidCoder/Properties/Settings.settings
@@ -197,5 +197,8 @@
     <Setting Name="PreferredPlayer" Type="System.String" Scope="User">
       <Value Profile="(Default)">vlc</Value>
     </Setting>
+    <Setting Name="BetaUpdates" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
