--- a/VidCoder/app.config
+++ b/VidCoder/app.config
@@ -204,6 +204,9 @@
    <setting name="PreferredPlayer" serializeAs="String">
     <value>vlc</value>
    </setting>
+   <setting name="BetaUpdates" serializeAs="String">
+    <value>False</value>
+   </setting>
   </VidCoder.Properties.Settings>
 	</userSettings>
 </configuration>
