Change preview to use EncodeProxy, add VidCoderWorker.exe to installer, Improve clean-up logic in VidCoderWorker.
--HG--
branch : beta

--- a/VidCoderWorker/VidCoderWorker.csproj
+++ b/VidCoderWorker/VidCoderWorker.csproj
@@ -80,6 +80,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EncodeState.cs" />
     <Compile Include="HandBrakeEncoder.cs" />
     <Compile Include="IHandBrakeEncoder.cs" />
     <Compile Include="IHandBrakeEncoderCallback.cs" />
