Added ability to choose VidCoder's language. Changed all text to the better looking TextFormattingMode.Display.
--HG--
branch : beta

--- a/VidCoder/Properties/Settings.settings
+++ b/VidCoder/Properties/Settings.settings
@@ -200,5 +200,8 @@
     <Setting Name="BetaUpdates" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="InterfaceLanguageCode" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
