--- a/VidCoder/app.config
+++ b/VidCoder/app.config
@@ -207,6 +207,9 @@
    <setting name="BetaUpdates" serializeAs="String">
     <value>False</value>
    </setting>
+   <setting name="InterfaceLanguageCode" serializeAs="String">
+    <value />
+   </setting>
   </VidCoder.Properties.Settings>
 	</userSettings>
 </configuration>
