--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -384,52 +384,52 @@
     <Compile Include="Converters\ChapterVMConverter.cs" />
     <Compile Include="DataReaderExtensions.cs" />
     <Compile Include="EnumStringConverter.cs" />
-    <Compile Include="LocalResources\ChapterMarkersRes.Designer.cs">
+    <Compile Include="Resources\ChapterMarkersRes.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>ChapterMarkersRes.resx</DependentUpon>
     </Compile>
-    <Compile Include="LocalResources\EncodingRes.Designer.cs">
+    <Compile Include="Resources\EncodingRes.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>EncodingRes.resx</DependentUpon>
     </Compile>
-    <Compile Include="LocalResources\EnumsRes.Designer.cs">
+    <Compile Include="Resources\EnumsRes.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>EnumsRes.resx</DependentUpon>
     </Compile>
-    <Compile Include="LocalResources\LogRes.Designer.cs">
+    <Compile Include="Resources\LogRes.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>LogRes.resx</DependentUpon>
     </Compile>
-    <Compile Include="LocalResources\MainRes.Designer.cs">
+    <Compile Include="Resources\MainRes.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>MainRes.resx</DependentUpon>
     </Compile>
-    <Compile Include="LocalResources\MiscRes.Designer.cs">
+    <Compile Include="Resources\MiscRes.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>MiscRes.resx</DependentUpon>
     </Compile>
-    <Compile Include="LocalResources\OptionsRes.Designer.cs">
+    <Compile Include="Resources\OptionsRes.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>OptionsRes.resx</DependentUpon>
     </Compile>
-    <Compile Include="LocalResources\PreviewRes.Designer.cs">
+    <Compile Include="Resources\PreviewRes.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>PreviewRes.resx</DependentUpon>
     </Compile>
-    <Compile Include="LocalResources\QueueTitlesRes.Designer.cs">
+    <Compile Include="Resources\QueueTitlesRes.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>QueueTitlesRes.resx</DependentUpon>
     </Compile>
-    <Compile Include="LocalResources\SubtitleRes.Designer.cs">
+    <Compile Include="Resources\SubtitleRes.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>SubtitleRes.resx</DependentUpon>
@@ -662,10 +662,10 @@
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Properties\Resources.Designer.cs">
+    <Compile Include="Resources\CommonRes.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
+      <DependentUpon>CommonRes.resx</DependentUpon>
     </Compile>
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -716,64 +716,64 @@
     </Compile>
     <Compile Include="WindowPlacement.cs" />
     <Compile Include="WindowPlacementWpf.cs" />
-    <EmbeddedResource Include="LocalResources\ChapterMarkersRes.hu.resx" />
-    <EmbeddedResource Include="LocalResources\ChapterMarkersRes.resx">
+    <EmbeddedResource Include="Resources\ChapterMarkersRes.hu.resx" />
+    <EmbeddedResource Include="Resources\ChapterMarkersRes.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>ChapterMarkersRes.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="LocalResources\EncodingRes.hu.resx" />
-    <EmbeddedResource Include="LocalResources\EncodingRes.resx">
+    <EmbeddedResource Include="Resources\EncodingRes.hu.resx" />
+    <EmbeddedResource Include="Resources\EncodingRes.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>EncodingRes.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="LocalResources\EnumsRes.hu.resx" />
-    <EmbeddedResource Include="LocalResources\EnumsRes.resx">
+    <EmbeddedResource Include="Resources\EnumsRes.hu.resx" />
+    <EmbeddedResource Include="Resources\EnumsRes.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>EnumsRes.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="LocalResources\LogRes.hu.resx" />
-    <EmbeddedResource Include="LocalResources\LogRes.resx">
+    <EmbeddedResource Include="Resources\LogRes.hu.resx" />
+    <EmbeddedResource Include="Resources\LogRes.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>LogRes.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="LocalResources\MainRes.hu.resx" />
-    <EmbeddedResource Include="LocalResources\MainRes.resx">
+    <EmbeddedResource Include="Resources\MainRes.hu.resx" />
+    <EmbeddedResource Include="Resources\MainRes.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>MainRes.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="LocalResources\MiscRes.hu.resx" />
-    <EmbeddedResource Include="LocalResources\MiscRes.resx">
+    <EmbeddedResource Include="Resources\MiscRes.hu.resx" />
+    <EmbeddedResource Include="Resources\MiscRes.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>MiscRes.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="LocalResources\OptionsRes.hu.resx" />
-    <EmbeddedResource Include="LocalResources\OptionsRes.resx">
+    <EmbeddedResource Include="Resources\OptionsRes.hu.resx" />
+    <EmbeddedResource Include="Resources\OptionsRes.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>OptionsRes.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="LocalResources\PreviewRes.hu.resx" />
-    <EmbeddedResource Include="LocalResources\PreviewRes.resx">
+    <EmbeddedResource Include="Resources\PreviewRes.hu.resx" />
+    <EmbeddedResource Include="Resources\PreviewRes.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>PreviewRes.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="LocalResources\QueueTitlesRes.hu.resx" />
-    <EmbeddedResource Include="LocalResources\QueueTitlesRes.resx">
+    <EmbeddedResource Include="Resources\QueueTitlesRes.hu.resx" />
+    <EmbeddedResource Include="Resources\QueueTitlesRes.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>QueueTitlesRes.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="LocalResources\SubtitleRes.hu.resx" />
-    <EmbeddedResource Include="LocalResources\SubtitleRes.resx">
+    <EmbeddedResource Include="Resources\SubtitleRes.hu.resx" />
+    <EmbeddedResource Include="Resources\SubtitleRes.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>SubtitleRes.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.hu.resx" />
-    <EmbeddedResource Include="Properties\Resources.resx">
+    <EmbeddedResource Include="Resources\CommonRes.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <LastGenOutput>CommonRes.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <None Include="App.config">
